--- a/CoffeeFinder/templates/CoffeeFinderApp/index.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/index.html
@@ -48,7 +48,7 @@
         </div>
       </header>
       <!--<div id="home" style="background-image: url('http://i60.tinypic.com/2uhv7o2.jpg'); width: 100%; height: 862px;" class="parallax hidden-xs">-->
-      <div id="home" style="background-image: url('{% static "/static/images/index.jpg" %}'); width: 100%; height: 862px;" class="parallax hidden-xs">
+      <div id="home" style="background-image: url('{% static "/static/images/background/index.jpg" %}'); width: 100%; height: 862px;" class="parallax hidden-xs">
         <div data-ls="slidedelay: 4000; transition2d: 5,5;" class="ls-slide"><a href="/CoffeeFinderApp/map/">
           <h1 style="top: 47%; left: 50%;" class="ls-l text-center">Find <span class="color"></a>Coffee </span></h1>
         </div>
