--- a/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
+++ b/CoffeeFinder/templates/CoffeeFinderApp/page_list.html
@@ -1,19 +1,166 @@
 
-        {% if pages %}
-            <ul>
+        <!DOCTYPE html>
+{% load staticfiles %}
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>CoffeeFinder</title>
+    <link rel="shortcut icon" href="assets/images/favicon.png">
+    <!-- Including stylesheets-->
+    <link rel="stylesheet" href="{% static 'css/core.css' %}">
+    <link rel="stylesheet" href="{% static 'css/theme.css' %}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700&amp;subset=latin,latin-ext">
+    <link rel="stylesheet" href="{% static 'css/layerslider.css' %}">
+    <link rel="stylesheet" href="{% static 'css/prettyPhoto.css' %}">
+    <link rel="stylesheet" href="{% static 'css/colorpicker.css' %}">
+  </head>
+  <body class="menu-style-2 responsive sticky-menu">
+    <!--include colorpicker-->
+    <div class="site-wrapper">
+      <!-- Site Header -->
+      <header class="site-header">
+        <div class="container">
+          <div class="row">
+            <!-- Site Logo: change the width to fit your logo size-->
+            <div class="site-logo retina pull-left"><ul class="site-navigation"><li class="active"><a href="/CoffeeFinderApp/"> CoffeeFinder</a></li></ul></div>
+            <!-- Site Navigation-->
+            <nav role="navigation" class="navbar pull-right">
+              <!-- Site Navigation Header: this part is required and is used on mobile.-->
+              <div class="navbar-header">
+                <button type="button" data-toggle="collapse" data-target=".site-navigation" class="navbar-toggle"><span class="sr-only">Toggle navigation</span><span class="fa fa-bars"></span></button>
+              </div>
+              <!-- Site Navigation: main menu content-->
+              <ul class="site-navigation">
+                <li><a href="/CoffeeFinderApp/page_list/">Find A CoffeeShop</a>
+                </li>
+                <li><a href="/CoffeeFinderApp/shopSubscribe" data-toggle="dropdown" class="dropdown-toggle">Create Your CoffeeShop</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li><a href="/CoffeeFinderApp/logout/">Logout</a></li>
+                {% else %}
+                <li><a href="/CoffeeFinderApp/login/">Sign In</a></li>
+                <li><a href="/CoffeeFinderApp/register/">Register</a></li>
+                {% endif %}
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <!--<div id="home" style="background-image: url('http://i60.tinypic.com/2uhv7o2.jpg'); width: 100%; height: 862px;" class="parallax hidden-xs">-->
+
+
+
+
+            <div id="home" style="background-image: url('{% static "/static/images/background/pageList5.jpg" %}'); width: 100%; height: 862px;" class="parallax hidden-xs">
+                <section class="pizza-guy-wrapper">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+                <br><br><br><br>
+                <br><br>
+              <h1 style="top: 47%; left: 50%;" class="ls-l text-center"> <span class="color">CoffeeShops </a> </span></h1>
+              <br>
+            </div>
+          </div>
+
+          <div class="row pizza-guy">
+            <div class="col-md-6 col-md-offset-3">
+                {% if pages %}
+           
                 {% for page in pages %}
                 <!-- Following line changed to add an HTML hyperlink -->
-                <li><a href="/CoffeeFinderApp/page/{{ page.slug }}">{{ page.name }}</a></li><br><br>
+          
+                <h4 style="top: 55%; left: 50%;" class="ls-l text-center" ><a href="/CoffeeFinderApp/page/{{ page.slug }}">{{ page.name }}</a></h4>
+
                 {% endfor %}
-            </ul>
+           
        {% else %}
             <strong>There are no Coffee Shops present.</strong>
        {% endif %}
 
-       <!-- for loop , loops through ' Page' table in our database to list all Coffee Shop pages  -->
-       <!-- Kareem Tarek 28-1181 -->  {% if user.is_authenticated %}
-<a href="/CoffeeFinderApp/logout/">Logout</a><br />
-{% else %}
-<a href="/CoffeeFinderApp/register/">Register Here</a><br />
-<a href="/CoffeeFinderApp/login/">Login</a><br />
-{% endif %}
+            </div>
+          </div>
+        </div>
+      </section>
+      </div>
+
+
+    </div>
+      </div>
+
+      <!-- Including scripts-->
+      <!-- script(src="")-->
+      <input id="site-url" type="hidden" value="http://anpsthemes.com/latest/HTML/kataleya/">
+      <footer class="site-footer">
+        <div class="copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-6"></div>
+              <div class="col-sm-6">
+                <div class="social"><a href="#" class="fa fa-twitter"></a><a href="#" class="fa fa-facebook"></a><a href="#" class="fa fa-behance"></a><a href="#" class="fa fa-skype"></a><a href="#" class="fa fa-vimeo-square"></a><a href="#" class="fa fa-google-plus"></a><a href="#" class="fa fa-linkedin-square"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <script src="{% static 'javascript/jquery.js' %}"></script>
+      <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+      <script src="{% static 'javascript/gmap3.js' %}"></script>
+      <script src="{% static 'javascript/jquery.cookie.js' %}"></script>
+      <script src="{% static 'javascript/theme.js' %}"></script>
+      <script src="{% static 'javascript/smoothscroll.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/tab.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/collapse.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/alert.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/carousel.js' %}"></script>
+      <script src="{% static 'javascript/bootstrap/transition.js' %}"></script>
+      <script src="{% static 'javascript/jquery.touchSwipe.js' %}"></script>
+      <script src="{% static 'javascript/picturefill.js' %}" async></script>
+      <script src="{% static 'javascript/parallax.js' %}"></script>
+      <script src="{% static 'javascript/imagesloaded.js' %}"></script>
+      <script src="{% static 'javascript/isotope.js' %}"></script>
+      <script src="{% static 'javascript/jflickrfeed.js' %}"></script>
+      <script src="{% static 'javascript/jquery.prettyPhoto.js' %}"></script>
+      <!-- LayerSlider-->
+      <script src="{% static 'javascript/greensock.js' %}"></script>
+      <script src="{% static 'javascript/layerslider.transitions.js' %}"></script>
+      <script src="{% static 'javascript/layerslider.kreaturamedia.jquery.js' %}"></script>
+      <!-- Colorpicker-->
+      <script src="{% static 'javascript/colorpicker.js' %}"></script>
+      <script>
+        jQuery(function($) {
+         map('#map', '2 Elizabeth St, Melbourne', 14);
+         
+         $("#no-clutter").parallax("50%", 0.6);
+         $("#home").parallax("50%", 0.6);
+         $("#coffee-statement-1").parallax("50%", 0.6);
+         $("#pizza-statement-1").parallax("50%", 0.6);
+        });
+        
+      </script>
+      <script>
+        jQuery(function() {
+         jQuery('#home').layerSlider({
+          skin        : 'kataleya',
+          skinsPath       : 'assets/css/layerslider/skins/',
+          responsiveUnder   : 1200,
+          layersContainer   : 1200,
+          responsive      : true,
+          showCircleTimer   : false
+         });
+        });
+      </script>
+    </div>
+  </body>
+</html>
+
+
+
+
+
+
+
+
